1. 分析第一个程序，补充笔记

--- a/01_初识vue/初识vue.html
+++ b/01_初识vue/初识vue.html
@@ -11,7 +11,11 @@
     <!-- 初识vue
     1.想让vue工作，必须创建一个vue实例，且要传入一个配置对象
     2.root容器里面的代码依然符合html规范，只不过里面混入了一些特殊的vue语法
-    3.root容器里面的代码被称为“Vue模版” -->
+    3.root容器里面的代码被称为“Vue模版”
+    4.Vue实例和容器是一一对应的
+    5.真实开发中，只有一个Vue实例，并且会配合组件一起使用
+    6.{{xxx}}中的xxx要写js表达式，且xxx可以自动读取到data中的所有属性
+    7.一旦data中的数据发生改变，那么模版中用到该数据的地方也会自动更新 -->
 
     <!-- 准备好一个容器 -->
     <div id="root">
